<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateEventFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTextEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/editTextPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewStart"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewStartHour"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewEnd"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="match_parent"
                android:text="@string/end"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textViewEndHour"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_evente"
            android:layout_marginTop="40dp"/>
        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update"
            android:layout_marginTop="40dp"
            android:visibility="gone"/>
    </LinearLayout>





</LinearLayout>