<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EventInformationFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/editTextEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/editTextPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewStart"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewStartHour"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewEnd"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="match_parent"
                android:text="@string/end"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textViewEndHour"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:id="@+id/contentEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/shape_event">

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Cita medica"
                android:textSize="24dp"
                android:paddingLeft="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:padding="20dp">
                <TextView
                    android:id="@+id/textViewStartEvent"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2020/09/21 8:00 AM"/>

                <TextView
                    android:id="@+id/textViewEndEvent"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2020/09/21 8:00 AM"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textViewEventPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Clinica Medellin"
                android:textSize="20dp"
                android:paddingLeft="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/delete"
            android:layout_margin="10dp"/>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/edit" />
        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/update"
            android:layout_margin="10dp"
            android:visibility="gone"/>
    </LinearLayout>




</LinearLayout>